# xWebProcessor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xWebProcessor.pro
CMake/: FindCtemplate.cmake
Deployment/: info.plist  logo.icns
Doc/: Illustrations.pptx
Modules/: 00_configEnv.pri  03_model_xWebML.pri  03_model_xWebML_generation.pri  03_model_xWebProc.pri  04_logic_xWebProc.pri  06_app_Common.pri  07_foundation_install.list  07_foundation_install_debug.list  07_install.pri
Schemas/: CMakeLists.txt  Schemas.qrc  xWebMLLinkList.xsd  xWebMLProject.xsd  xWebMLStringList.xsd  xWebMLTemplate.xsd
Src/: CMakeLists.txt  main.cpp  xWebProcessorDefs.h
Src/app/common/: ApplicationEnvironment.cpp  ApplicationEnvironment.h  CommandLineParams.cpp  CommandLineParams.h
Src/logic/xWebProc/: xWebFileItemProcessor.cpp  xWebFileItemProcessor.h  xWebProcessor.cpp  xWebProcessor.h  xWebTemplateParser.cpp  xWebTemplateParser.h  xWebTemplateProcessor.cpp  xWebTemplateProcessor.h
Src/model/xWebProc/: xWebLanguageMap.cpp  xWebLanguageMap.h  xWebProcessContext.cpp  xWebProcessContext.h  xWebStringList.cpp  xWebStringList.h  xWebStringsParser.cpp  xWebStringsParser.h
